Added homepage and fixed linting errors

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "animal-crossing",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://vanessaroycroft.com/acnh",
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.3",
 		"@testing-library/jest-dom": "^4.2.4",
