--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,15 @@
 # production
 /build
 
+# env files
+.env
+.env.development
+.env.production
+.env.local
+.env.*.local
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
