--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "animal-crossing",
 	"version": "0.1.0",
+	"homepage": ".",
 	"private": true,
-	"homepage": "https://vanessaroycroft.com/acnh",
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.3",
 		"@testing-library/jest-dom": "^4.2.4",
