--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
 		"bootstrap": "^4.4.1",
 		"graphql": "^14.6.0",
 		"ka-table": "^2.10.2",
+		"node-sass": "^4.13.1",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.9.0",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"source-map-explorer": "^2.4.2"
 	},
 	"scripts": {
+		"analyze": "source-map-explorer 'build/static/js/*.js'",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -38,5 +41,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@fullhuman/postcss-purgecss": "^2.1.0"
 	}
 }
